# epublift

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: archiving.md  device-compatibility.md  epub-3.4.md  markdown-import.md  metadata.md  pdf-import.md  smart-import.md  usage.md  w3c-zstd-ocf-discussion-draft.md  web-service.md  zstandard-research.md
docs/design/: eparc-codec-choice.md  eparc-format.md  epub-3.4-image-codec-choice.md  zstd-ocf-experimental.md
epublift-web/: Cargo.toml  build.rs
epublift-web/src/: main.rs
epublift-web/static/: app.js  i18n.js  index.html
kobo-webp-plugin/: BUILD.md  INSTALL.md  KoboRoot.tgz  LICENSE-NOTES.md  README.md
src/: enrich.rs  eparc.rs  epub_writer.rs  http.rs  images.rs  kepub.rs  lib.rs  main.rs  markdown.rs  meta.rs  nav.rs  opf.rs  report.rs  util.rs  zstd_ocf.rs
src/pdf/: extract.rs  mod.rs  ocr.rs  reflow.rs  structure.rs
src/smart_import/: mistral.rs  mod.rs
tests/: convert.rs  pdf_import.rs
