[workspace]
members = [".", "epublift-web"]
resolver = "2"

[package]
name = "epublift"
version = "1.3.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Modernize and optimize EPUB files — upgrade structure and re-encode images"
readme = "README.md"
rust-version = "1.94"
authors = ["Baris Kayadelen <baris@kayadelen.com>"]
repository = "https://github.com/ePubLift/epublift"
homepage = "https://github.com/ePubLift/epublift"
keywords = ["epub", "webp", "ebook", "epub3", "converter"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "epublift"
path = "src/main.rs"

[[bin]]
name = "gen-sample"
path = "src/bin/gen_sample.rs"

# Dev-only benchmark for the experimental Zstd-OCF research track. Built only
# when the feature is enabled, so it never ships in a release artifact.
[[bin]]
name = "zstd-bench"
path = "src/bin/zstd_bench.rs"
required-features = ["zstd-experimental"]

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zenwebp = "0.4"
quick-xml = "0.40"
roxmltree = "0.21"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3"
walkdir = "2"
anyhow = "1"
percent-encoding = "2"
any_ascii = "0.3"

# Experimental Zstandard-OCF packaging (research track) — see
# docs/design/zstd-ocf-experimental.md. Pure Rust, no FFI. Opt-in at compile
# time so the default shipped artifact is byte-identical to today (no new deps).
structured-zstd = { version = "0.0.40", optional = true }
crc32fast = { version = "1", optional = true }
# Bench-only reference backend: the C libzstd. NEVER part of a shipped artifact —
# gated behind `zstd-c-bench`, used only by the local benchmark to report the
# pure-Rust floor vs the C ceiling. Keeps Guiding Principle #1 (pure Rust, no C).
zstd = { version = "0.13", optional = true }

[features]
# Compile in the experimental `--zstd` packaging + decoder (pure Rust).
zstd-experimental = ["dep:structured-zstd", "dep:crc32fast"]
# Additionally compile the C libzstd reference backend for the benchmark only.
zstd-c-bench = ["zstd-experimental", "dep:zstd"]

[dev-dependencies]
# Used by the integration tests to assemble EPUB fixtures and inspect output.
zip = { version = "8", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
