[workspace]
members = [".", "epublift-web"]
resolver = "2"

[package]
name = "epublift"
version = "1.5.2"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Modernize and optimize EPUB files — upgrade structure and re-encode images"
readme = "README.md"
rust-version = "1.94"
authors = ["Baris Kayadelen <baris@kayadelen.com>"]
repository = "https://github.com/ePubLift/epublift"
homepage = "https://github.com/ePubLift/epublift"
keywords = ["epub", "webp", "ebook", "epub3", "converter"]
categories = ["command-line-utilities", "multimedia::images"]

# Debian/Ubuntu/Raspberry Pi OS package metadata (used by `cargo deb` in the
# release workflow). Only the `epublift` binary ships; `target/release/epublift`
# is auto-rewritten to the per-target path when `--target` is passed.
[package.metadata.deb]
maintainer = "Baris Kayadelen <baris@kayadelen.com>"
section = "utils"
priority = "optional"
extended-description = "Modernize and optimize EPUB files (upgrade to EPUB 3.3, re-encode images to WebP), and archive/restore a personal library as compact .eparc files."
assets = [
    ["target/release/epublift", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/epublift/README.md", "644"],
    ["CHANGELOG.md", "usr/share/doc/epublift/CHANGELOG.md", "644"],
]

# Fedora/RHEL/openSUSE package metadata (used by `cargo generate-rpm` in the
# release workflow). `auto-req = "no"` because the shipped binary is static musl
# (no shared-library dependencies). `target/release` is rewritten per `--target`.
[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/release/epublift", dest = "/usr/bin/epublift", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/epublift/README.md", mode = "644" },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/epublift/CHANGELOG.md", mode = "644" },
]

[[bin]]
name = "epublift"
path = "src/main.rs"

[[bin]]
name = "gen-sample"
path = "src/bin/gen_sample.rs"

# Dev-only benchmark for the experimental Zstd-OCF research track. Built only
# when the feature is enabled, so it never ships in a release artifact.
[[bin]]
name = "zstd-bench"
path = "src/bin/zstd_bench.rs"
required-features = ["zstd-experimental"]

# Dev-only EPUB 3.4 image-codec calibration bench. Built only with `img-calib`.
[[bin]]
name = "img-calib"
path = "src/bin/img_calib.rs"
required-features = ["img-calib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zenwebp = "0.4"
quick-xml = "0.40"
roxmltree = "0.21"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3"
walkdir = "2"
anyhow = "1"
percent-encoding = "2"
any_ascii = "0.3"

# Experimental Zstandard-OCF packaging (research track) — see
# docs/design/zstd-ocf-experimental.md. Pure Rust, no FFI. Opt-in at compile
# time so the default shipped artifact is byte-identical to today (no new deps).
# Also the compression backend for the archival mode (`archival` feature).
structured-zstd = { version = "0.0.40", optional = true, features = ["dict_builder"] }
crc32fast = { version = "1", optional = true }
# Archival mode (`.eparc`) — see docs/design/eparc-format.md. Pure Rust. SHA-256
# for whole-file provenance/fixity; serde(_json) for the human-readable manifest.
sha2 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
# Experimental EPUB 3.4 image codecs (opt-in, `epub34` feature). Pure Rust, no
# FFI — part of the imazen `zen*` codec family we already use for WebP (zenwebp),
# unified by the `zencodec` traits. AVIF via zenavif, JPEG XL via zenjxl. Gated
# so the default shipped binary stays lean and 3.3-only; see docs/epub-3.4.md.
zenavif = { version = "0.1", optional = true, features = ["encode"] }
zenjxl = { version = "0.2", optional = true, features = ["encode"] }
# Shared pixel types for the zen* encoders' convenience entry points
# (`encode_rgb8(ImgRef<Rgb<u8>>, …)`); almost-enough provides the AVIF encoder's
# cooperative-cancellation StopToken.
rgb = { version = "0.8", optional = true }
imgref = { version = "1", optional = true }
almost-enough = { version = "0.4", optional = true }
# Bench-only reference backend: the C libzstd. NEVER part of a shipped artifact —
# gated behind `zstd-c-bench`, used only by the local benchmark to report the
# pure-Rust floor vs the C ceiling. Keeps Guiding Principle #1 (pure Rust, no C).
zstd = { version = "0.13", optional = true }
# Bench-only pure-Rust Brotli backend for the ARCHIVAL research track: brotli-11
# has a web/HTML-tuned static dictionary, a strong candidate for the solid-stream
# `.eparc` archive. Pure Rust (rust-brotli), bench-gated for now — it does not
# ship until the archival mode lands. Used by `zstd-bench --solid`.
brotli = { version = "8", optional = true }
# Bench-only C reference CEILING for the archival track: xz/LZMA (liblzma) is the
# usual ratio champion on text. Used ONLY to quantify how much ratio the pure-Rust
# choice trades away (and, via --mem-probe, at what memory cost). NEVER shipped —
# gated behind `ceiling-bench`, keeps Guiding Principle #1 (pure Rust, no C).
xz2 = { version = "0.1", optional = true }
butteraugli = { version = "0.9", optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["std", "tls12", "logging"], optional = true }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
webpki-roots = { version = "1.0.8", optional = true }

[features]
# Archival mode (`epublift archive` / `restore` → `.eparc`) ships by default.
# All pure Rust; build with `--no-default-features` to drop it. See
# docs/design/eparc-format.md.
default = ["archival"]
archival = ["dep:structured-zstd", "dep:crc32fast", "dep:sha2", "dep:serde", "dep:serde_json"]
# Metadata enrichment: `epublift meta enrich --isbn` fills missing fields from an
# online catalogue (Open Library first). Opt-in so the default build stays
# offline + C-free. The HTTPS client is 100% pure Rust: rustls with the RustCrypto
# crypto provider (no ring/aws-lc, no C toolchain) + webpki-roots, over a small
# hand-rolled HTTP/1.1 client (see src/http.rs).
metadata = [
    "dep:serde_json",
    "dep:rustls",
    "dep:rustls-rustcrypto",
    "dep:webpki-roots",
]
# Experimental EPUB 3.4 output: emit AVIF / JPEG XL images under `--target 3.4`.
# Pure Rust imazen codecs (zenavif + zenjxl, unified by zencodec); opt-in so the
# default build stays 3.3.
epub34 = ["dep:zenavif", "dep:zenjxl", "dep:rgb", "dep:imgref", "dep:almost-enough"]
# Compile in the experimental `--zstd` packaging + decoder (pure Rust).
zstd-experimental = ["dep:structured-zstd", "dep:crc32fast"]
# Additionally compile the C libzstd reference backend for the benchmark only.
zstd-c-bench = ["zstd-experimental", "dep:zstd"]
# Archival research track: add the pure-Rust Brotli backend so `zstd-bench --solid`
# can compare solid zstd-ultra vs brotli-11 for the `.eparc` archive format.
archival-bench = ["zstd-experimental", "dep:brotli"]
# Additionally add the C reference ceilings (libzstd --ultra + xz/LZMA) to the
# solid comparison. Dev-only; documents the pure-Rust ratio/memory trade-off.
ceiling-bench = ["archival-bench", "dep:zstd", "dep:xz2"]
butteraugli = ["dep:butteraugli"]
# Dev-only image-codec calibration bench: compare WebP/AVIF/JXL at EQUAL
# perceptual quality (butteraugli) on a directory of images. Never shipped.
# NOTE: zenavif's pure-Rust rav1d decoder (0.1.6) panics on Apple Silicon for some
# AVIF inputs (a loop-restoration SIMD bug). The bench catches those panics and
# excludes the affected images from the comparison (see src/bin/img_calib.rs).
img-calib = ["epub34", "dep:butteraugli", "zenjxl?/decode"]
rustls = ["dep:rustls"]
rustls-rustcrypto = ["dep:rustls-rustcrypto"]
webpki-roots = ["dep:webpki-roots"]

[dev-dependencies]
# Used by the integration tests to assemble EPUB fixtures and inspect output.
zip = { version = "8", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
