[package]
name = "epublift-web"
# Versioned independently from the CLI: releases on `web-v*` tags. Baselined to
# 1.3.0 (the GHCR image was at :1.3.0); 1.4.0 adds the multi-language UI; 1.5.0
# adds in-browser archive/restore (.eparc).
version = "1.5.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Web front-end for epublift: convert, archive & restore EPUBs in the browser"
repository = "https://github.com/ePubLift/epublift"
rust-version = "1.94"
publish = false

[dependencies]
# `epub34` enables the experimental EPUB 3.4 image codecs (AVIF / JPEG XL) so the
# web UI's "Target version: 3.4" option works. Pure Rust (zenavif/zenjxl).
epublift = { path = "..", features = ["epub34"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["timeout", "cors", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
