[package]
name = "epublift-web"
# Versioned independently from the CLI: releases on `web-v*` tags. Baselined to
# 1.3.0 (the GHCR image was at :1.3.0); 1.4.0 adds the multi-language UI; 1.5.0
# adds in-browser archive/restore (.eparc); 1.6.0 adds experimental EPUB 3.4
# (AVIF / JPEG XL) and builds with the `epub34` feature; 1.6.1 encodes AVIF at a
# faster speed to stay under the request timeout; 1.6.2 shows the build version
# + commit in the footer; 1.7.0 adds the Metadata editor (read/edit + Open
# Library ISBN enrichment, language-aware) and builds with the `metadata` feature;
# 1.7.1 adds Google Books as a second enrichment provider + localized errors;
# 1.7.2 refreshes the landing-page copy to include the Metadata editor (13 langs);
# 1.8.0 adds the experimental Import PDF mode (PDF → reflowable EPUB, 13 langs);
# 1.8.1 advertises Import PDF in the landing-page hero copy (13 langs).
version = "1.8.1"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Web front-end for epublift: convert, archive, restore & edit EPUB metadata in the browser"
repository = "https://github.com/ePubLift/epublift"
rust-version = "1.94"
publish = false

[dependencies]
# `epub34` enables the experimental EPUB 3.4 image codecs (AVIF / JPEG XL) so the
# web UI's "Target version: 3.4" option works. `metadata` adds ISBN enrichment
# (Open Library) for the metadata editor. Both pure Rust (zenavif/zenjxl;
# rustls + RustCrypto — no C).
# `pdf` adds the experimental PDF → EPUB importer (text tiers; OCR not yet).
epublift = { path = "..", features = ["epub34", "metadata", "pdf"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["timeout", "cors", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
